--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^12.12.11",
     "@types/react": "^16.9.11",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "restful-react": "^9.2.0",
+    "to-camel-case": "^1.0.0",
     "typescript": "^3.7.2"
   },
   "scripts": {
