--- a/backend/stack.yaml
+++ b/backend/stack.yaml
@@ -1,4 +1,4 @@
-resolver: nightly-2019-06-12
+resolver: lts-14.15
 
 extra-deps:
   - base-noprelude-4.12.0.0@sha256:dcd5ece10257f79fa16e207d558b31ab3467b205adae5d1976abdee28b1c8b4a
