--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,7 +8,28 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Step into backend
-        run: cd backend
+      - name: Cache docker builds
+        uses: actions/cache@v1
+        with:
+          path: cache-docker
+          key: cache-docker-${{ github.ref }}
+          restore-keys: |
+            cache-docker-refs/heads/master
+            cache-docker-
+      - name: Debug Cache
+        run: |
+          ls -lh cache-docker
+      - name: Load Docker image cache
+        run: |
+          docker load -i cache-docker/dependencies.tar | true
+      - name: Build packages image
+        run: cd backend && docker build --target dependencies --cache-from puzzles/app-dependencies:latest -t puzzles/app-dependencies .
       - name: Build the Docker image
-        run: cd backend && docker build . --tag puzzles-backend:$(date +%s)
+        run: cd backend && docker build --target app --cache-from puzzles/app-dependencies:latest -t puzzles/app .
+      - name: Debug Cache
+        run: |
+          ls -lh cache-docker
+      - name: Save the docker images
+        run: |
+          mkdir -p cache-docker
+          docker save -o cache-docker/dependencies.tar puzzles/app-dependencies
