--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
     "@types/react": "^16.9.11",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "restful-react": "^9.2.0",
+    "strongly-connected-components": "^1.0.1",
     "to-camel-case": "^1.0.0",
     "typescript": "^3.7.2"
   },
