--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -26,9 +26,12 @@ library
                        Prelude
                        Effects.KVS
                        Effects.PuzzleCRUD
+                       Effects.Shuffle
                        Server.Crossword
                        Server.Puzzles
                        Server.TrainTracks
+                       Puzzles.TrainTracks
+                       Prng
 
   build-depends:       base-noprelude >= 4.11.1.0
                      , relude
@@ -60,6 +63,7 @@ library
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -fplugin=Polysemy.Plugin
+                       -O2
 
   default-language:    Haskell2010
   default-extensions:    DataKinds
@@ -74,6 +78,7 @@ library
                        , TypeFamilies
                        , OverloadedStrings
                        , DeriveGeneric
+                       , BlockArguments
 
 
 executable backend
