randomly generate start point

--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -50,8 +50,7 @@ library
                      , polysemy-zoo >= 0.6.0.1
                      , polysemy-plugin >= 0.2.4.0
                      , containers
-                     , random
-                     , rando
+                     , time
 
   ghc-options:         -Wall
                        -Wincomplete-uni-patterns
